safari grid-row-gap/flex margin fix

--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -5,6 +5,12 @@
   object-fit: contain;
 }
 
+@media (max-width: 730px) {
+  .place__image {
+    margin-top: 32px;
+  }
+}
+
 @media (max-width: 500px) {
   .place__image {
     width: 90%;
