--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -35,6 +35,8 @@
   .place {
     display: flex;
     flex-direction: column;
+    grid-column-gap: 0;
+    grid-row-gap: 0;
   }
 }
 
